# empulse

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run.py
.github/workflows/: docker.yml
empulse/: app.py  config.py  database.py  formatting.py  geo.py  models.py  newsletter.py  update_checker.py
empulse/activity/: poller.py  processor.py  session_state.py
empulse/db/: display.py  history.py  libraries.py  stats.py  users.py
empulse/emby/: client.py  models.py  websocket.py
empulse/notifications/: engine.py  url_validator.py
empulse/templates/: 403.html  404.html  500.html  base.html  dashboard.html  graphs.html  history.html  item.html  libraries.html  library.html  login.html  map.html  settings.html  settings_newsletter.html  settings_notifications.html  unwatched.html  user.html  users.html
empulse/web/: api.py  auth.py  deps.py  poster_cache.py  router.py  unwatched.py  websocket.py
emtulli/: app.py  config.py  database.py  models.py
emtulli/activity/: poller.py  processor.py  session_state.py
emtulli/db/: history.py  stats.py  users.py
emtulli/emby/: client.py  models.py  websocket.py
emtulli/templates/: base.html  dashboard.html  history.html  item.html  libraries.html  library.html  login.html  (+3 more)
tasks/: lessons.md  todo.md
tests/: conftest.py  test_auth.py  test_database.py  test_emby_models.py  test_formatting.py  test_models.py  test_notifications.py  test_processor.py  test_session_state.py  test_update_checker.py  test_web.py
(+27 files in other folders)
