[project]
name = "empulse"
version = "0.2.5"
description = "Activity monitoring for Emby Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.34",
    "aiosqlite~=0.20",
    "httpx~=0.28",
    "websockets~=14.0",
    "pydantic-settings~=2.7",
    "jinja2~=3.1",
    "python-dotenv~=1.0",
    "python-multipart~=0.0.18",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.setuptools.packages.find]
include = ["empulse*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
